--- a/DXImageAnalyzePlugin/DXImageAnalyzePlugin/DXImageAnalyzePlugin-Info.plist
+++ b/DXImageAnalyzePlugin/DXImageAnalyzePlugin/DXImageAnalyzePlugin-Info.plist
@@ -24,9 +24,11 @@
 	<string>1</string>
 	<key>XC4Compatible</key>
 	<true/>
-	<key>XCGCReady</key>
-	<true/>
 	<key>XCPluginHasUI</key>
 	<false/>
+	<key>DVTPlugInCompatibilityUUIDs</key>
+	<array>
+		<string>37B30044-3B14-46BA-ABAA-F01000C27B63</string>
+	</array>
 </dict>
 </plist>
